os-files/routes/mail-route.yml
- apiVersion: v1
  kind: Route
  metadata:
    name: mail
  spec:
    host: ${MAIL_ADDRESS}
    port:
      targetPort: 4443-tcp
    tls:
      termination: passthrough
      insecureEdgeTerminationPolicy: Redirect
    to:
      kind: Service
      name: mail
